--- a/.github/workflows/publish_to_pypi_test.yml
+++ b/.github/workflows/publish_to_pypi_test.yml
@@ -20,6 +20,9 @@ jobs:
         uses: actions/setup-python@v1
         with: { python-version: 3.8 }
 
+      - name: Run type check
+        uses: jpetrucciani/mypy-check@master
+
       - name: 😷Run Tests
         run: python -m unittest discover -s tests
 
